--- a/hack/helm/values.yaml
+++ b/hack/helm/values.yaml
@@ -1,15 +1,9 @@
+# Replaces the Chart.yaml name but will still generate names based on this value
 nameOverride: ""
+# Entirely replaces the generated object name with this value
 fullnameOverride: ""
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
+# A list of namespaces to add the HNC exclude label to
 hncExcludeNamespaces:
  - kube-system
  - kube-public
