--- a/hack/helm/templates/clusterrolebinding.yaml
+++ b/hack/helm/templates/clusterrolebinding.yaml
@@ -2,17 +2,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: hnc
+  name: {{ include "hnc.fullname" . }}
   labels:
-    {{- include "..labels" . | nindent 4 }}
+    {{- include "hnc.labels" . | nindent 4 }}
   annotations:
-    helm.sh/hook: pre-install,pre-upgrade,post-delete
-    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
+    helm.sh/hook: pre-install,post-delete
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: {{ include "hnc.fullname" . }}
 subjects:
 - kind: ServiceAccount
-  name: hnc
+  name: {{ include "hnc.fullname" . }}
   namespace: {{ .Release.Namespace }}
