--- a/hack/helm/templates/serviceaccount.yaml
+++ b/hack/helm/templates/serviceaccount.yaml
@@ -1,15 +1,9 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: hnc
+  name: {{ include "hnc.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "..labels" . | nindent 4 }}
+    {{- include "hnc.labels" . | nindent 4 }}
   annotations:
-    helm.sh/hook: pre-install,pre-upgrade,post-delete
-    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
-  {{- with .Values.serviceAccount.annotations }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
+    helm.sh/hook: pre-install,post-delete
