--- a/hack/krew-kubectl-hns.yaml
+++ b/hack/krew-kubectl-hns.yaml
@@ -58,3 +58,15 @@ spec:
       - from: "bin/kubectl/LICENSE"
         to: "."
     bin: "./kubectl-hns_darwin_amd64"
+  - uri: https://github.com/HNC_RELEASE_REPO_OWNER/hierarchical-namespaces/releases/download/hnc-HNC_IMG_TAG/kubectl-hns.tar.gz
+    selector:
+      matchLabels:
+        os: windows
+        arch: amd64
+    sha256: HNC_KREW_TAR_SHA256
+    files:
+      - from: "bin/kubectl/kubectl-hns_windows_amd64.exe"
+        to: "."
+      - from: "bin/kubectl/LICENSE"
+        to: "."
+    bin: "./kubectl-hns_windows_amd64.exe"
