Enable HNC leader election in controllers

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -41,3 +41,12 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - create
+  - get
+  - list
+  - update
