--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,8 +10,8 @@ steps:
     echo Cloning from https://github.com/$_HNC_REPO_OWNER/hierarchical-namespaces
     git clone https://github.com/$_HNC_REPO_OWNER/hierarchical-namespaces
     cd hierarchical-namespaces
-    echo Checking out hnc-$_HNC_IMG_TAG
-    git checkout hnc-$_HNC_IMG_TAG
+    echo Checking out $_HNC_IMG_TAG
+    git checkout _HNC_IMG_TAG
 # Build the manifests and the kubectl plugin
 - name: golang:1.17
   entrypoint: 'bash'
