--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,9 +11,9 @@ patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 # and setting served and storage versions.
-- patches/webhook_in_hierarchyconfigurations.yaml
-- patches/webhook_in_hncconfigurations.yaml
-- patches/webhook_in_subnamespaceanchors.yaml
+# - patches/webhook_in_hierarchyconfigurations.yaml
+# - patches/webhook_in_hncconfigurations.yaml
+# - patches/webhook_in_subnamespaceanchors.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
