fix: metrics port for the controller-manager #115
Signed-off-by: gkarthiks <github.gkarthiks@gmail.com>

--- a/config/rbac/auth_proxy_service.yaml
+++ b/config/rbac/auth_proxy_service.yaml
@@ -13,6 +13,6 @@ spec:
   ports:
   - name: https
     port: 8443
-    targetPort: https
+    targetPort: metrics
   selector:
     control-plane: controller-manager
