Initial attempt and automated artifact creation using cloud build.
Tested: Manually called cloud build and verified artifacts were created.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,5 @@
+# Note: This file is used for the manual release process.
+# We intend to sunset this as we create auto created releases.
 steps:
 # Build release container image
 # Pull source and check out correct tag
