Import HRQ into HNC (disabled by default)
This implementation of Hierarchical Resource Quotas (HRQs) is based on
the implementation from the GKE Hierarchy Controller.  It's not a
straight import since the GKE version was deployed as a separate
workload, but I've made minimal adaptations to get it to fit into HNC.

Tested: This has only been _very_ lightly tested in HNC so far. I've
imported all the integ tests and E2E tests, and they all pass, but I
certainly wouldn't recommend that anyone use it just yet (all existing
e2e tests pass too). The default manifest includes the HRQ CRD and
permissions but nothing else (notably, the HRQ webhooks), and one
feature - the periodic resync of HRQ usages - is not yet implemented
(I'll do that in a followup PR).

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/hnc.x-k8s.io_hierarchyconfigurations.yaml
 - bases/hnc.x-k8s.io_hncconfigurations.yaml
 - bases/hnc.x-k8s.io_subnamespaceanchors.yaml
+- bases/hnc.x-k8s.io_hierarchicalresourcequotas.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -15,11 +16,6 @@ patchesStrategicMerge:
 # - patches/webhook_in_hncconfigurations.yaml
 # - patches/webhook_in_subnamespaceanchors.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
-
-# [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
-# patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_hierarchies.yaml
-# +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
