--- a/config/manager/metrics_service.yaml
+++ b/config/manager/metrics_service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    prometheus.io/port: "8443"
-    prometheus.io/scheme: https
+    prometheus.io/port: "8080"
+    prometheus.io/scheme: http
     prometheus.io/scrape: "true"
   labels:
     control-plane: controller-manager
@@ -11,8 +11,8 @@ metadata:
   namespace: system
 spec:
   ports:
-  - name: https
-    port: 8443
-    targetPort: https
+  - name: metrics
+    port: 8080
+    targetPort: metrics
   selector:
     control-plane: controller-manager
