Expose port 8081 in the manager pods
Signed-off-by: Andreas Lindhé <andreas@lindhe.io>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -56,6 +56,9 @@ spec:
         - containerPort: 8080
           name: metrics
           protocol: TCP
+        - containerPort: 8081
+          name: healthz
+          protocol: TCP
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
