--- a/config/internalcert/manifests.yaml
+++ b/config/internalcert/manifests.yaml
@@ -1,5 +1,12 @@
+---
 apiVersion: v1
 kind: Secret
 metadata:
   name: webhook-server-cert
+  namespace: system
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: resourcelist
   namespace: system
