--- a/config/variants/default-cm/kustomization.yaml
+++ b/config/variants/default-cm/kustomization.yaml
@@ -14,9 +14,11 @@ bases:
 - ../../manager
 - ../../rbac
 - ../../webhook
+- ../../apiextension
 
 patchesStrategicMerge:
 - webhookcainjection_patch.yaml
+- apiservicecainjection_patch.yaml
 
 vars:
 - name: CERTIFICATE_NAMESPACE # namespace of the certificate CR
@@ -45,3 +47,14 @@ vars:
     kind: Service
     version: v1
     name: webhook-service
+- name: APIEXT_SERVICE_NAME
+  objref:
+    kind: Service
+    version: v1
+    name: resourcelist
+- name: APIEXT_CERTIFICATE_NAME
+  objref:
+    kind: Certificate
+    group: cert-manager.io
+    version: v1
+    name: resourcelist
