feat(chart): create & mount service account
Signed-off-by: Gerrit Pannek <nold@gnu.one>

--- a/charts/hnc/templates/hnc-controller-manager.yaml
+++ b/charts/hnc/templates/hnc-controller-manager.yaml
@@ -17,6 +17,7 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
+      serviceAccountName: {{ .Values.manager.serviceAccount }}
       containers:
         - args:
             {{- if .Values.hrq.enabled }}
