--- a/charts/hnc/templates/hnc-manager-rolebinding.yaml
+++ b/charts/hnc/templates/hnc-manager-rolebinding.yaml
@@ -8,5 +8,5 @@ roleRef:
   name: '{{ include "hnc.fullname" . }}-manager-role'
 subjects:
   - kind: ServiceAccount
-    name: default
+    name: "{{ $.Values.manager.serviceAccount }}"
     namespace: '{{ include "hnc.namespace" . }}'
