feat: extra args on manager

--- a/charts/hnc/templates/hnc-controller-manager-ha.yaml
+++ b/charts/hnc/templates/hnc-controller-manager-ha.yaml
@@ -32,6 +32,9 @@ spec:
             - --apiserver-qps-throttle=50
             - --nopropagation-label=cattle.io/creator=norman
             - --webhooks-only
+            {{- range $arg := .Values.manager.extraArgs }}
+            - {{ $arg }}
+            {{- end }}
           command:
             - /manager
           image: {{ .Values.image.repository }}:{{ .Values.image.tag | default "hnc-manager:latest" }}
